--- a/package.json
+++ b/package.json
@@ -1,23 +1,43 @@
 {
-  "name": "shopify",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EkaterinaKaliago/shopify.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/EkaterinaKaliago/shopify/issues"
-  },
-  "homepage": "https://github.com/EkaterinaKaliago/shopify#readme",
-  "devDependencies": {
-    "webpack": "^5.19.0",
-    "webpack-cli": "^4.4.0"
-  }
+    "name": "shopify",
+    "version": "1.0.0",
+    "description": "builder",
+    "main": "index.js",
+    "scripts": {
+        "dev": "webpack-dev-server --open --config ./build/webpack.dev.conf.js",
+        "build": "webpack --config ./build/webpack.build.conf.js"
+    },
+    "browserslist": [
+        "> 1%",
+        "last 3 version"
+    ],
+    "author": "",
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/core": "^7.12.10",
+        "@babel/preset-env": "^7.12.11",
+        "autoprefixer": "^10.2.4",
+        "babel-loader": "^8.2.2",
+        "css-loader": "^5.0.1",
+        "css-mqpacker": "^7.0.0",
+        "cssnano": "^4.1.10",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^4.5.1",
+        "imagemin-mozjpeg": "^9.0.0",
+        "imagemin-webpack-plugin": "^2.4.2",
+        "mini-css-extract-plugin": "^1.3.5",
+        "path": "^0.12.7",
+        "postcss-loader": "^4.2.0",
+        "style-loader": "^2.0.0",
+        "svg-sprite-loader": "^5.2.1",
+        "webpack": "^5.19.0",
+        "webpack-cli": "^4.4.0",
+        "webpack-dev-server": "^3.11.2",
+        "sass-loader": "^10.1.1",
+        "webpack-merge": "^5.7.3"
+    },
+    "dependencies": {
+        "clean-webpack-plugin": "^3.0.0",
+        "node-sass": "^5.0.0"
+    }
 }
